src/test/deca/context/invalid/langage_sans_objet/regles_communes/regle_0_2.deca
// Description:
//    regle 0.1 opération partielle
//
// Resultats:
//    Ligne 7: Identificateur de type non déclaré.
{
    A a;
}

// raison : opération partielle
// “Identificateur de type non déclaré”
